3rd commit- again resize the home page to correct the error of 100vh on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,10 +103,10 @@ h3.welcome{
 
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1350px){
 
 .home-page {
-  height: 87.5vh ;
+  height: 89vh ;
 
 }
 }
